# fanControl

./: .clang-format  .ignore  CMakeLists.txt  LICENSE  License.txt  README.md  fanControlConfig.h.in
lib/: CMakeLists.txt  menu.cpp  menu.h  utils.cpp  utils.h
scripts/: build.cmake.in  cmake_uninstall.cmake.in  install.cmake.in
scripts/cPack/: postinst
src/: Sensors.cpp  Sensors.h  config_menu.cpp  config_menu.h  main.cpp  main.h  shell_commands.h
